Fixed some alignment of activities items

--- a/public/src/scss/partials/_timeline.scss
+++ b/public/src/scss/partials/_timeline.scss
@@ -51,13 +51,14 @@
         }
 
         h3 {
+            color: #00f;
             letter-spacing: 2px;
+            line-height: 1;
             margin-right: 1rem;
+        }
 
-            span {
-                color: #00f;
-                padding: 0.1rem .5rem;
-            }
+        li {
+            line-height: 1;
         }
 
         li:first-child {
@@ -70,9 +71,14 @@
     list-style: none;
     margin: 1rem 0;
 
-    .activities-item-meta {
+    .activities-item-descrip {
         display: block;
+        margin: .5rem 0;
+    }
+
+    .activities-item-meta {
         font-size: .75rem;
+        margin-top: .5rem;
     }
 
     &.template {
